fixed collapsed navbar & Active by page

--- a/styles/layout/_Navbar.scss
+++ b/styles/layout/_Navbar.scss
@@ -18,4 +18,6 @@
         justify-content: space-between;
         align-items: center;
     }
+    .collapsedLinkContainer {
+    }
 }
